--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 
     <div class="btn-div">
-        <a class="btn" href="javascript:(function(){var%20d=document,s=d.createElement('script'),h=d.getElementsByTagName('head')[0],t=new%20Date();s.src='//indexof.site/labs/weibo/index.js?t='+t.getFullYear()+t.getMonth()+t.getDate();s.charset='utf-8';if(h){h.appendChild(s);}})();">下载微博视频</a>
+        <a class="btn" href="javascript:(function(){var%20d=document,s=d.createElement('script'),h=d.getElementsByTagName('head')[0],t=new%20Date();s.src='//video.0xgg.com/index.js?t='+t.getFullYear()+t.getMonth()+t.getDate();s.charset='utf-8';if(h){h.appendChild(s);}})();">下载微博视频</a>
             <div>
                 1. 把这个按钮拖到收藏栏 </br>
                 2. 然后在<a href="http://weibo.com" target="_blank">微博页面</a>点击此按钮,视频既会显示下载按钮
