--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <img class="img" src="https://ww4.sinaimg.cn/large/006tNc79gy1fdr29v6hx7g30pf0e67uw.gif" alt="">
         <div>
             IE下因为兼容性问题需要右键另存为</br>
-            如果遇到无法使用请联系QQ：1215254215
+            如果遇到无法使用请联系邮箱：1215254215 AT qq.com </br>
         </div>
     </div>
 
