--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>微博视频下载插件</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="Keywords" content="微博视频下载,微博视频下载插件,如何下载微博视频,怎么下载微博视频">
     <meta name="Description" content="微博视频下载,微博视频下载插件">
     <style type="text/css">
@@ -76,5 +76,6 @@
                 2. 然后在<a href="http://weibo.com" target="_blank">微博页面</a>点击此按钮,视频既会显示下载按钮
             </div>
     </div>
+    <a href="http://us.sinaimg.cn/001WXQbojx079D7pEsEU010401001Clc0k01.mp4?label=mp4_hd&Expires=1489928514&ssig=2K6Z1g4HJg&KID=unistore,video" download>test</a>
 </body>
 </html>
